--- a/DiffusionEquation.ipynb
+++ b/DiffusionEquation.ipynb
@@ -678,7 +678,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### References\n",
+        "### References:\n",
         "Followed [this](https://github.com/jdtoscano94/Learning-Scientific_Machine_Learning_Residual_Based_Attention_PINNs_PIKANs_DeepONets) tutorial by Juan Diego Toscano."
       ],
       "metadata": {
